# Group-Fair-PL

./: .gitignore  README.OG.md  REPRO.md  pyproject.toml
config/: config_German.jsonc  config_MOVLENS.jsonc  config_pcaHMDA.jsonc  local_dataset_info.json
scripts/: add_bias.py  do_pca.py  run.sh  slurm_base.sh  slurm_setup.sh
src/: main.py
src/algorithms/: PLRank.py  PLRank_multiprocessing.py  lambdaloss.py  pytorchloss.py  stochasticrank.py
src/utils/: dataset.py  evaluate.py  nnmodel.py  plackettluce.py
