[project]
name = "GroupFair-PL"
version = "0.0.1"
dependencies = [
    "numpy",
    "pandas",
    "scikit_learn",
    "pyjson5",
    "torch",
    "tqdm"
]
license = "Apache-2.0"
readme = "README.md"
description = "Group Fairness using Plackett-Luce Stochastic Models"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/algorithms", "src/utils"]